Fix spacing between create todo buttons and todo list

--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ button#add-todo-button.hidden {
 .todo-button-group {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 
 .project-button-group > button {
@@ -321,6 +321,7 @@ button.custom-projects-button > .project-button-left {
 div.create-todo-form {
   width: 100%;
   flex-direction: column;
+  gap: 8px;
 }
 
 .create-todo-form .todo-button-group {
